test_regress/t/t_enum_bad_wrap.out
%Error: t/t_enum_bad_wrap.v:11:19: Enum value illegally wrapped around (IEEE 1800-2023 6.19)
                                 : ... note: In instance 't'
   11 |                   WRAPPED
      |                   ^~~~~~~
%Error: Exiting due to
